Reservations stream på member endpoint